mdapi_output_dir/objects/Error_Log__c.object
<CustomObject>
    <label>Error Log</label>
    <nameField>
        <displayFormat>LOG - {000000}</displayFormat>
        <label>Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Lod_DateTime__c</fullName>
        <label>Lod Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log_Details__c</fullName>
        <label>Log Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <label>Process Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lod_DateTime__c</columns>
        <columns>Process_Name__c</columns>
        <columns>Log_Details__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>